# bazelRio

./: .gitignore  BUILD  LICENSE.md  README.md  README.md.template  WORKSPACE  update-dependencies.py  wpilibc.bzl  wpilibc_artifact.bzl
.github/workflows/: build-example.yaml  generate_deps_files.yml  lint.yml  update-readme.yaml
bazelrio/: defs.bzl  deps.bzl  deps_utils.bzl
bazelrio/constraints/is_roborio/: BUILD
bazelrio/dependencies/apriltaglib/: deps.bzl
bazelrio/dependencies/colorsensor/: deps.bzl
bazelrio/dependencies/googletest/: deps.bzl
bazelrio/deploy/: BUILD  deploy.py  requirements.txt
example/: .bazelrc  BUILD  WORKSPACE
example/src/: robot.cpp  robot.hpp
examples/cpp_example/: .bazelrc  BUILD  WORKSPACE
examples/java_example/: .bazelrc  BUILD  WORKSPACE
examples/java_example/src/main/java/frc/robot/: BUILD  BUILD.bazel  RobotContainer.java
examples/java_example/src/main/java/frc/robot/commands/: BUILD  JoystickDriveCommand.java  SetElevatorSetpointCommand.java  ShooterRpmCommand.java
examples/java_example/src/main/java/frc/robot/subsystems/: BUILD  DriveTrain.java  Elevator.java  PortMap.java  Shooter.java
examples/kotlin_example/: .bazelrc  BUILD  WORKSPACE
examples/opensdk_example/: BUILD  WORKSPACE
scripts/: apriltag_dependencies.py  check_for_vendordep_updates.py  dependencies.py  deps.py  generate_dependencies.py  googletest_dependencies.py  imgui_dependencies.py  libssh_dependencies.py  ni_dependencies.py  opencv_dependencies.py  platforms.py  toolchain_dependencies.py  vendordep_dependency.py  wpilib_dependencies.py
scripts/templates/: single_dep_group.jinja  toolchain_dep.jinja  top_level_dep_group.jinja  top_level_toolchain_group.jinja
(+236 files in other folders)
