load("@bazelrio//:defs.bzl", "robot_java_binary")

robot_java_binary(
    name = "robot",
    srcs = glob(["*.java"]),
    main_class = "frc.robot.Main",
    deps = [
        "//src/main/java/frc/robot/commands",
        "//src/main/java/frc/robot/subsystems",
        "@bazelrio//libraries/java/wpilib/wpilibj",
        "@bazelrio//libraries/java/wpilib/new_commands",
        "@bazelrio//libraries/java/wpilib/wpimath",
    ],
    team_number = 1337,
)
